--- a/Frontend/src/styles/Sign.css
+++ b/Frontend/src/styles/Sign.css
@@ -1,6 +1,7 @@
 .sign{
     width: 100%;
     height: 100vh;
+    min-height: 750px;
     background-color: var(--gray-400);
     display: flex;
     flex-direction: column;
@@ -77,3 +78,38 @@
 .sign label > a{
     text-decoration: none;
 }
+
+@media screen and (max-width: 768px){    
+    .sign .form-container{
+        width: 60%;
+        min-width: 380px;
+    }
+
+}
+
+@media screen and (max-width: 450px){
+    .sign .form-container{
+        min-width: 310px;
+    }
+
+    .sign .logo{
+        margin-top: 5%;
+        font-size: 2.5em;
+    }
+    
+    .sign .form-container{
+        padding: 40px 30px;
+    }
+    
+    .sign .form-title{
+        font-size: 2em;
+    }
+
+    .sign .form-sign > input{
+        font-size: 1em;
+    }
+
+    .sign .btn-login, .btn-create-account{
+        font-size: 1em;
+    }
+}  
